--- a/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/PageList/PageList.less
+++ b/src/Modules/Content/Dnn.PersonaBar.Pages/Pages.Web/src/components/PageList/PageList.less
@@ -13,7 +13,7 @@
 
     .search-container {
         float: left;    
-        margin: 5px 30px 0px 30px;
+        margin: 10px 30px 0px 30px;
         width: ~"calc(100% - 60px)";
         border-bottom: 1px solid #c8c8c8;    
         margin-bottom: 15px;    
